2006-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Describe the following change briefly.
	* bootstrap.conf (gnulib_modules): Remove stat-macros; no longer
	needed.
	* gzip.c: Don't include stat-macros.h; no longer needed.
	(treat_file): Refuse to compress files that are setuid, or setgid,
	as this can in theory lead to security holes.  Also, refuse to
	compress files with the sticky bit set, on general principle.
	(copy_stat): Don't copy the setuid, setgid, or sticky bits,
	as (given the above change) they'll always be zero here.
	Invoke chmod before chown, to close a race condition.

	* .cvsignore: Add *.doc, build-aux.
	* doc/.cvignore: New file.
	* lib/.cvsignore: New file.
	* m4/.cvsignore: New file.

2006-12-01  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/gzip.texi (Overview): Mention limits of gzip format's
	time stamps.  Also, gzip doesn't always preserve time stamps.

	* gzip.c (abort_gzip_signal): Don't call abort () as a "safeguard",
	since it actually causes a core dump.  Problem reported by
	Jakub Bogusz.

	* NEWS: Describe gzexe changes noted below.
	* Makefile.am (.in): Don't bother with SEDCMD.  This stuff isn't needed
	any more (the hosts it caters to are long extinct), and was
	questionable anyway since the code assumes the skip= line was line 2.
	* configure.ac (AC_SYS_INTERPRETER, SEDCMD): Remove; no longer needed.

	* gzexe.in: Sweep the code and fix some bugs.
	My, what sharp teeth you have, gzexe!
	The straw that broke this camel's back was Matthew Burgess's bug report
	<http://lists.gnu.org/archive/html/bug-gzip/2006-11/msg00012.html>.

	(IFS): Set it to the standard value, both here and in the
	script gzexe generates.
	Check for missing operand after parsing options, not before.
	This fixes the case for "cpexe --".
	Check for tail -n problem separately in gzexe and in the executable
	it generates, in case it's a different 'tail'.
	(trap): Remove $tmp only if $tmp is not the empty string.
	Preserve exit status.