@@ -23,7 +23,6 @@ IMPORT_FROM_GETTEXT=no
 
 # gnulib modules used by this package.
 gnulib_modules='
-	openat
 	fcntl
 	fcntl-safer
 	fdl
