@@ -1,3 +1,15 @@
+2006-12-05  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Port to Tandem NSK/OSS, which lacks fchdir.  Problem reported by
+	Matthew Woehlke in
+	<http://lists.gnu.org/archive/html/bug-gzip/2006-11/msg00013.html>.
+	* bootstrap.conf (gnulib_modules): Remove openat, as it pulls in
+	fchdir.
+	* configure.ac: Check for fdopendir.
+	* gzip.c: Don't include openat.h; no longer needed.
+	(treat_dir) [!HAVE_FDOPENDIR]: Fall back on the old opendir method
+	since fdopendir is not available.
+
 2006-12-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* NEWS: Describe the following change briefly.
